# wyoming-onnx-stt

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
wyoming_onnx_stt/: __init__.py  __main__.py  config.py  handler.py
